Fix rendering of story header on mobile

--- a/src/css/_08.view-story.scss
+++ b/src/css/_08.view-story.scss
@@ -14,7 +14,7 @@ $color-story-call-to-action: #a9a9a9;
     display: flex;
     .item {
       margin: 0;
-      width: calc(100% / 3);
+      width: calc(100% / 2);
     }
     .controls {
       text-align: left;
